--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "axios": "^1.7.9",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "googleapis": "^144.0.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
